Feature: Graph, Node, Config, ReadWrite Loader, and add the test
- in the testApi.org file
- add the api
  - detail can be seen at testApi.org
